--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     ext.kotlin_version = "1.3.72"
+    ext.gradle_version = "4.1.2"
+    ext.ktx_version = "1.3.2"
+    ext.appcompat_version = "1.2.0"
+    ext.material_version = "1.2.1"
+    ext.koin_version = "2.2.2"
+    ext.leakcanary_version = "2.6"
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
