--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.material_version = "1.2.1"
     ext.koin_version = "2.2.2"
     ext.leakcanary_version = "2.6"
+    ext.lifecycle_version = "2.2.0"
 
     repositories {
         google()
