--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@
 app/src/main/kotlin/.idea
 .DS_Store
 /build
-/build.*
-build.*
-.*/build
-.*/build/
+/*/build/
 /captures
 .externalNativeBuild
 .cxx
