--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation project(':catalogue')
     implementation project(':map')
     implementation project(':planner')
+    implementation project(':data')
+    implementation project(':domain')
 
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
