--- a/common.gradle
+++ b/common.gradle
@@ -30,4 +30,7 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+
+    //Logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
