--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.4.21"
     ext.gradle_version = "4.1.2"
     ext.ktx_version = "1.3.2"
     ext.appcompat_version = "1.2.0"
@@ -8,6 +8,7 @@ buildscript {
     ext.koin_version = "2.2.2"
     ext.leakcanary_version = "2.6"
     ext.lifecycle_version = "2.2.0"
+    ext.coroutines_version = "1.3.7"
 
     repositories {
         google()
