--- a/common.gradle
+++ b/common.gradle
@@ -18,6 +18,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+
+        // Disabling coroutine's ExperimentalCoroutinesApi warning
+        freeCompilerArgs += [
+                "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi",
+                "-Xuse-experimental=kotlinx.coroutines.TheAnnotationYouWantToDisable"
+        ]
     }
 }
 
