--- a/map/build.gradle
+++ b/map/build.gradle
@@ -5,4 +5,7 @@ apply from: "$rootDir/presentation.gradle"
 dependencies {
     implementation project(':core')
     implementation project(':domain')
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
