--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
     ext.leakcanary_version = "2.6"
     ext.lifecycle_version = "2.2.0"
     ext.coroutines_version = "1.4.2"
+    ext.room_version = "2.2.6"
+    ext.activity_version = "1.1.0"
+    ext.fragment_version = "1.3.0-rc02"
+    ext.gms_version = "17.0.0"
 
     repositories {
         google()
