Some unit tests

--- a/map/build.gradle
+++ b/map/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.library"
 apply from: "$rootDir/common.gradle"
 apply from: "$rootDir/presentation.gradle"
+apply plugin: "de.mannodermaus.android-junit5"
 
 dependencies {
     implementation project(':core')
@@ -9,4 +10,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
 }
