--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     ext.activity_version = "1.1.0"
     ext.fragment_version = "1.3.0-rc02"
     ext.gms_version = "17.0.0"
+    ext.gms_version = "17.0.0"
 
     repositories {
         google()
@@ -21,6 +22,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
     }
 }
 
