--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 include ':tracking'
 include ':logger'
-include ':core'
-include ':planner'
-include ':map'
+include ':presentation-core'
+include ':presentation-planner'
+include ':presentation-map'
 include ':domain'
-include ':catalogue'
+include ':presentation-catalogue'
 include ':data'
 include ':app'
 rootProject.name = "ZOO"
