--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 }
 
 dependencies {
+    implementation project(':core')
     implementation project(':presentation-core')
     implementation project(':domain')
     implementation project(':data')
