--- a/data/build.gradle
+++ b/data/build.gradle
@@ -15,6 +15,7 @@ android {
 }
 
 dependencies {
+    implementation project(':core')
     implementation project(':domain')
 
     implementation "androidx.room:room-ktx:$room_version"
