--- a/presentation-map/build.gradle
+++ b/presentation-map/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "de.mannodermaus.android-junit5"
 
 dependencies {
     implementation project(':core')
+    implementation project(':mapview')
     implementation project(':presentation-core')
     implementation project(':domain')
     implementation project(':tracking')
