--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
     ext.fragment_version = "1.3.0-rc02"
     ext.gms_version = "17.0.0"
     ext.gms_version = "17.0.0"
+    ext.retrofit_version = "2.9.0"
+    ext.okhttp_version = "4.9.0"
 
     repositories {
         google()
