--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     ext.gms_version = "17.0.0"
     ext.retrofit_version = "2.9.0"
     ext.okhttp_version = "4.9.0"
+    ext.moshi_version = "1.11.0"
 
     repositories {
         google()
