--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,4 +21,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 }
