--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
-    ext.kotlin_version = "1.4.21"
-    ext.gradle_version = "4.1.2"
+    ext.kotlin_version = "1.4.30"
+    ext.gradle_version = '7.0.0-alpha08'
     ext.ktx_version = "1.3.2"
     ext.appcompat_version = "1.2.0"
     ext.material_version = "1.2.1"
@@ -17,9 +17,11 @@ buildscript {
     ext.retrofit_version = "2.9.0"
     ext.okhttp_version = "4.9.0"
     ext.moshi_version = "1.11.0"
+    ext.compose_version = "1.0.0-beta01"
 
     repositories {
         google()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
     dependencies {
@@ -32,6 +34,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
 }
