--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
 
     ext.kotlin_version = "1.4.30"
-    ext.gradle_version = '7.0.0-alpha08'
+    ext.gradle_version = '7.0.0-alpha13'
     ext.ktx_version = "1.3.2"
-    ext.appcompat_version = "1.2.0"
+    ext.appcompat_version = "1.3.0-beta01"
     ext.material_version = "1.2.1"
     ext.koin_version = "2.2.2"
     ext.leakcanary_version = "2.6"
@@ -13,11 +13,11 @@ buildscript {
     ext.activity_version = "1.1.0"
     ext.fragment_version = "1.3.0-rc02"
     ext.gms_version = "17.0.0"
-    ext.gms_version = "17.0.0"
     ext.retrofit_version = "2.9.0"
     ext.okhttp_version = "4.9.0"
     ext.moshi_version = "1.11.0"
-    ext.compose_version = "1.0.0-beta01"
+    ext.compose_version = "1.0.0-beta04"
+    ext.glide_version = "4.12.0"
 
     repositories {
         google()
