--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext.kotlin_version = "1.4.32"
-    ext.gradle_version = '7.0.0-alpha15'
+    ext.gradle_version = '7.0.0-beta03'
     ext.ktx_version = "1.3.2"
     ext.appcompat_version = "1.3.0-beta01"
     ext.material_version = "1.2.1"
