--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -8,5 +8,7 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.google.accompanist:accompanist-glide:0.7.1"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 }
