--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
     ext.moshi_version = "1.11.0"
     ext.compose_version = "1.0.0-beta04"
     ext.glide_version = "4.12.0"
+    ext.navigation_version = "2.3.5"
 
     repositories {
         google()
@@ -28,6 +29,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
 }
 
