--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: "com.android.library"
 apply from: "$rootDir/common.gradle"
 apply from: "$rootDir/presentation.gradle"
+apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 dependencies {
     implementation project(':domain')
     implementation project(':presentation-core')
 
+    //Image Loader
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.google.accompanist:accompanist-glide:0.7.1"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 }
