--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -6,6 +6,7 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 
 dependencies {
     implementation project(':domain')
+    implementation project(':core')
     implementation project(':presentation-core')
 
     //Image Loader
