trans-module navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity
             android:name=".app.MainActivity"
             android:label="@string/app_name">
+
+            <nav-graph android:value="@navigation/mobile_navigation" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
