--- a/build.gradle
+++ b/build.gradle
@@ -4,21 +4,28 @@ buildscript {
     ext.gradle_version = '7.0.0-beta03'
     ext.ktx_version = "1.3.2"
     ext.appcompat_version = "1.3.0-beta01"
-    ext.material_version = "1.2.1"
+    ext.material_version = "1.2.1" // 1.3.0
     ext.koin_version = "2.2.2"
     ext.leakcanary_version = "2.6"
-    ext.lifecycle_version = "2.2.0"
-    ext.coroutines_version = "1.4.2"
-    ext.room_version = "2.2.6"
+    ext.coroutines_version = "1.4.2" // 1.5.0
+    ext.room_version = "2.3.0" // 2.3.0
     ext.activity_version = "1.1.0"
-    ext.fragment_version = "1.3.0-rc02"
-    ext.gms_version = "17.0.0"
+    ext.fragment_version = "1.3.0-rc02" // 1.4.0-alpha02
+    ext.gms_version = "17.0.0" // 18.0.0
     ext.retrofit_version = "2.9.0"
     ext.okhttp_version = "4.9.0"
     ext.moshi_version = "1.11.0"
-    ext.compose_version = "1.0.0-beta04"
     ext.glide_version = "4.12.0"
     ext.navigation_version = "2.3.5"
+    ext.constraintlayout_version = "2.0.4"
+
+    ext.lifecycle_version = "2.3.1"
+    ext.lifecycle_extensions_version = "2.2.0"
+
+    ext.compose_version = "1.0.0-beta04" // 1.0.0-beta07
+    ext.compose_activity_version= "1.3.0-alpha06" // 1.3.0-alpha08
+    ext.compose_viewmodel_version= "1.0.0-alpha04" // 1.0.0-alpha06
+    ext.glide_accompanist_version = "0.7.1" // "0.11.1"
 
     repositories {
         google()
