--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 
     //Image Loader
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    implementation "com.google.accompanist:accompanist-glide:0.7.1"
+    implementation "com.google.accompanist:accompanist-glide:$glide_accompanist_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     //Navigation
