--- a/tracking/build.gradle
+++ b/tracking/build.gradle
@@ -6,6 +6,6 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${lifecycle_version}"
-    implementation "androidx.lifecycle:lifecycle-common-java8:${lifecycle_version}"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 }
