--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity
             android:name=".app.MainActivity"
+            android:exported="true"
             android:label="@string/app_name">
 
             <nav-graph android:value="@navigation/mobile_navigation" />
