--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,35 @@
 buildscript {
 
-    ext.kotlin_version = "1.4.32" // "1.5.10"
+    ext.kotlin_version = "1.5.31"
     ext.gradle_version = '7.0.3'
-    ext.ktx_version = "1.3.2"
-    ext.appcompat_version = "1.3.0-beta01"
-    ext.material_version = "1.2.1" // "1.3.0"
+    ext.ktx_version = "1.7.0"
+    ext.appcompat_version = "1.3.1"
+    ext.material_version = "1.4.0"
     ext.koin_version = "2.2.2"
-    ext.leakcanary_version = "2.6"
-    ext.coroutines_version = "1.4.2" // "1.5.0"
-    ext.room_version = "2.3.0" // "2.3.0"
+    ext.leakcanary_version = "2.7"
+    ext.coroutines_version = "1.5.2"
+    ext.room_version = "2.3.0"
     ext.activity_version = "1.1.0"
-    ext.fragment_version = "1.3.0-rc02" // "1.4.0-alpha02"
-    ext.gms_version = "17.0.0" // "18.0.0"
+    ext.fragment_version = "1.3.6"
+    ext.gms_version = "18.0.0"
     ext.retrofit_version = "2.9.0"
     ext.okhttp_version = "4.9.0"
-    ext.moshi_version = "1.11.0"
+    ext.moshi_version = "1.12.0"
     ext.glide_version = "4.12.0"
     ext.navigation_version = "2.3.5"
-    ext.constraintlayout_version = "2.0.4"
+    ext.constraintlayout_version = "2.1.1"
+    ext.timber_version = "5.0.1"
+    ext.junit_jupiter = "5.8.1"
+    ext.junit5_version = "1.8.0.0"
 
-    ext.lifecycle_version = "2.3.1"
+    ext.lifecycle_version = "2.4.0"
     ext.lifecycle_extensions_version = "2.2.0"
 
-    ext.compose_version = "1.0.0-beta04" // "1.0.0-beta07"
-    ext.compose_activity_version= "1.3.0-alpha06" // "1.3.0-alpha08"
-    ext.compose_viewmodel_version= "1.0.0-alpha04" // "1.0.0-alpha06"
-    ext.glide_accompanist_version = "0.9.1" // "0.11.1"
+    ext.compose_version = "1.0.4"
+    ext.compose_activity_version= "1.4.0"
+    ext.compose_viewmodel_version= "2.4.0"
+    ext.glide_accompanist_version = "0.15.0"
+    ext.benManes_version = "0.39.0"
 
     repositories {
         google()
@@ -35,9 +39,13 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:$junit5_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
+}
+
+plugins {
+    id("com.github.ben-manes.versions").version("$benManes_version")
 }
 
 allprojects {
@@ -50,4 +58,18 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+tasks.named("dependencyUpdates").configure {
+    rejectVersionIf { dependency ->
+        ["alpha", "beta", "rc", "eap", "m"].any {
+            dependency.candidate.version.toLowerCase().contains(it)
+        }
+    }
+}
+
+tasks.whenTaskAdded {
+    if (name == "assembleDebug") {
+        dependsOn("dependencyUpdates")
+    }
 }
