--- a/mapview/build.gradle
+++ b/mapview/build.gradle
@@ -6,6 +6,6 @@ dependencies {
     implementation project(':core')
     implementation "com.google.android.material:material:$material_version"
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junit_jupiter")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junit_jupiter")
 }
