--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     //Image Loader
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.google.accompanist:accompanist-glide:$glide_accompanist_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
