--- a/presentation-map/build.gradle
+++ b/presentation-map/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     //Test
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junit_jupiter")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junit_jupiter")
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
