--- a/common.gradle
+++ b/common.gradle
@@ -31,9 +31,9 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx_version"
 
     //Dependency Injection
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-androidx-scope:$koin_version"
+    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
 
     //Logging
     implementation "com.jakewharton.timber:timber:$timber_version"
