--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
     ext.retrofit_version = "2.9.0"
     ext.okhttp_version = "4.9.0"
     ext.moshi_version = "1.12.0"
-    ext.glide_version = "4.12.0"
+    ext.coil_version = "1.4.0"
     ext.navigation_version = "2.3.5"
     ext.constraintlayout_version = "2.1.1"
     ext.timber_version = "5.0.1"
@@ -28,7 +28,6 @@ buildscript {
     ext.compose_version = "1.0.4"
     ext.compose_activity_version= "1.4.0"
     ext.compose_viewmodel_version= "2.4.0"
-    ext.glide_accompanist_version = "0.15.0"
     ext.benManes_version = "0.39.0"
 
     repositories {
