--- a/presentation.gradle
+++ b/presentation.gradle
@@ -21,7 +21,7 @@ dependencies {
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
-//    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
