--- a/presentation.gradle
+++ b/presentation.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "com.google.android.material:compose-theme-adapter:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
