--- a/mapview/build.gradle
+++ b/mapview/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.library"
 apply from: "$rootDir/common.gradle"
+apply from: "$rootDir/presentation.gradle"
 apply plugin: "de.mannodermaus.android-junit5"
 
 dependencies {
