--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,36 @@
 buildscript {
 
-    ext.kotlin_version = "1.5.31"
-    ext.gradle_version = '7.0.3'
-    ext.ktx_version = "1.7.0"
-    ext.appcompat_version = "1.3.1"
-    ext.material_version = "1.4.0"
-    ext.koin_version = "2.2.2"
-    ext.leakcanary_version = "2.7"
-    ext.coroutines_version = "1.5.2"
-    ext.room_version = "2.3.0"
-    ext.activity_version = "1.1.0"
-    ext.fragment_version = "1.3.6"
-    ext.gms_version = "18.0.0"
-    ext.retrofit_version = "2.9.0"
-    ext.okhttp_version = "4.9.0"
-    ext.moshi_version = "1.12.0"
-    ext.coil_version = "1.4.0"
-    ext.navigation_version = "2.3.5"
-    ext.constraintlayout_version = "2.1.1"
-    ext.timber_version = "5.0.1"
-    ext.junit_jupiter = "5.8.1"
-    ext.junit5_version = "1.8.0.0"
+    ext {
+        kotlin_version = "1.5.31"
+        gradle_version = '7.0.3'
+        ktx_version = "1.7.0"
+        appcompat_version = "1.3.1"
+        material_version = "1.4.0"
+        koin_version = "2.2.2"
+        leakcanary_version = "2.7"
+        coroutines_version = "1.5.2"
+        room_version = "2.3.0"
+        activity_version = "1.1.0"
+        fragment_version = "1.3.6"
+        gms_version = "18.0.0"
+        retrofit_version = "2.9.0"
+        okhttp_version = "4.9.0"
+        moshi_version = "1.12.0"
+        coil_version = "1.4.0"
+        navigation_version = "2.3.5"
+        constraintlayout_version = "2.1.1"
+        timber_version = "5.0.1"
+        junit_jupiter = "5.8.1"
+        junit5_version = "1.8.0.0"
 
-    ext.lifecycle_version = "2.4.0"
-    ext.lifecycle_extensions_version = "2.2.0"
+        lifecycle_version = "2.4.0"
+        lifecycle_extensions_version = "2.2.0"
 
-    ext.compose_version = "1.0.5"
-    ext.compose_activity_version= "1.4.0"
-    ext.compose_viewmodel_version= "2.4.0"
-    ext.benManes_version = "0.39.0"
+        compose_version = "1.0.5"
+        compose_activity_version = "1.4.0"
+        compose_viewmodel_version = "2.4.0"
+        benManes_version = "0.39.0"
+    }
 
     repositories {
         google()
