removal of old fragment

--- a/common.gradle
+++ b/common.gradle
@@ -16,7 +16,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
 
-        // Disabling coroutine's ExperimentalCoroutinesApi warning
+        // Disabling experimental warnings
         freeCompilerArgs += [
                 "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi",
                 "-Xuse-experimental=androidx.compose.animation.ExperimentalAnimationApi",
