--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
         coroutines_version = "1.5.2"
         room_version = "2.3.0"
         activity_version = "1.1.0"
-        fragment_version = "1.3.6"
+        fragment_version = "1.4.0"
         gms_version = "18.0.0"
         retrofit_version = "2.9.0"
         okhttp_version = "4.9.0"
         moshi_version = "1.12.0"
         coil_version = "1.4.0"
         navigation_version = "2.3.5"
-        constraintlayout_version = "2.1.1"
+        constraintlayout_version = "2.1.2"
         timber_version = "5.0.1"
         junit_jupiter = "5.8.1"
         junit5_version = "1.8.0.0"
@@ -29,6 +29,7 @@ buildscript {
         compose_version = "1.0.5"
         compose_activity_version = "1.4.0"
         compose_viewmodel_version = "2.4.0"
+        pager_version = "0.20.2"
         benManes_version = "0.39.0"
     }
 
