--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -7,6 +7,7 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 dependencies {
     implementation project(':domain')
     implementation project(':core')
+    implementation project(':mapview')
     implementation project(':presentation-core')
 
     //Image Loader
