--- a/presentation-planner/build.gradle
+++ b/presentation-planner/build.gradle
@@ -4,4 +4,5 @@ apply from: "$rootDir/presentation.gradle"
 
 dependencies {
     implementation project(':domain')
+    implementation project(':presentation-core')
 }
