working on planner

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    implementation "com.google.code.gson:gson:$gson_version"
+
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 }
