--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         leakcanary_version = "2.7"
         coroutines_version = "1.5.2"
         room_version = "2.3.0"
+        gson_version = "2.8.7"
         activity_version = "1.1.0"
         fragment_version = "1.4.0"
         gms_version = "18.0.0"
