--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".app.MainActivity"
             android:exported="true"
+            android:configChanges="uiMode"
             android:label="@string/app_name">
 
             <nav-graph android:value="@navigation/mobile_navigation" />
