--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         <activity
             android:name=".app.MainActivity"
             android:exported="true"
-            android:configChanges="uiMode"
-            android:label="@string/app_name">
+            android:configChanges="uiMode">
 
             <nav-graph android:value="@navigation/mobile_navigation" />
 
