--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,39 @@
 buildscript {
 
     ext {
-        kotlin_version = "1.5.31"
-        gradle_version = '7.0.3'
-        ktx_version = "1.7.0"
-        appcompat_version = "1.3.1"
-        material_version = "1.4.0"
+        kotlin_version = "1.6.10"
+        gradle_version = '7.2.1'
+        ktx_version = "1.8.0"
+        appcompat_version = "1.4.2"
+        material_version = "1.6.1"
         koin_version = "2.2.2"
-        leakcanary_version = "2.7"
-        coroutines_version = "1.5.2"
-        room_version = "2.3.0"
+        leakcanary_version = "2.9.1"
+        coroutines_version = "1.6.2"
+        room_version = "2.4.2"
         gson_version = "2.8.7"
         activity_version = "1.1.0"
-        fragment_version = "1.4.0"
-        gms_version = "18.0.0"
+        fragment_version = "1.4.1"
+        gms_version = "20.0.0"
         retrofit_version = "2.9.0"
         okhttp_version = "4.9.0"
-        moshi_version = "1.12.0"
-        coil_version = "1.4.0"
-        navigation_version = "2.3.5"
-        constraintlayout_version = "2.1.2"
+        moshi_version = "1.13.0"
+        coil_version = "2.1.0"
+        navigation_version = "2.4.2"
+        constraintlayout_version = "2.1.4"
         timber_version = "5.0.1"
-        junit_jupiter = "5.8.1"
-        junit5_version = "1.8.0.0"
-        mockito_version = "3.2.0"
+        junit_jupiter = "5.8.2"
+        junit5_version = "1.8.2.0"
+        mockito_version = "4.0.0"
 
-        lifecycle_version = "2.4.0"
+        lifecycle_version = "2.4.1"
         lifecycle_extensions_version = "2.2.0"
 
-        compose_version = "1.0.5"
+        compose_version = "1.1.1"
+        compose_theme_version = "1.1.11"
         compose_activity_version = "1.4.0"
-        compose_viewmodel_version = "2.4.0"
-        pager_version = "0.20.2"
-        benManes_version = "0.39.0"
+        compose_viewmodel_version = "2.4.1"
+        pager_version = "0.23.1"
+        benManes_version = "0.42.0"
     }
 
     repositories {
