--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
 
         <activity
             android:name=".app.MainActivity"
-            android:exported="true"
-            android:configChanges="uiMode">
+            android:exported="true">
 
             <nav-graph android:value="@navigation/mobile_navigation" />
 
