--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':core')
     implementation project(':mapview')
-    implementation project(':presentation-core')
+    api project(':presentation-core')
 
     //Image Loader
     implementation "io.coil-kt:coil-compose:$coil_version"
