--- a/common.gradle
+++ b/common.gradle
@@ -35,8 +35,7 @@ dependencies {
 
     //Dependency Injection
     implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-androidx-scope:$koin_version"
-    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     //Logging
     implementation "com.jakewharton.timber:timber:$timber_version"
