--- a/tracking/build.gradle
+++ b/tracking/build.gradle
@@ -9,4 +9,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions_version"
+
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
 }
