little compose refactor

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -3,8 +3,7 @@ apply from: "$rootDir/common.gradle"
 apply plugin: "de.mannodermaus.android-junit5"
 
 dependencies {
-    implementation project(':core')
-
+    implementation project(':geometry')
     //Test
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter"
