--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-    implementation project(':core')
+    implementation project(':geometry')
     implementation project(':presentation-core')
     implementation project(':domain')
     implementation project(':data')
