--- a/data/build.gradle
+++ b/data/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation project(':core')
+    implementation project(':geometry')
     implementation project(':domain')
 
     implementation "androidx.room:room-ktx:$room_version"
