--- a/mapview/build.gradle
+++ b/mapview/build.gradle
@@ -4,7 +4,7 @@ apply from: "$rootDir/presentation.gradle"
 apply plugin: "de.mannodermaus.android-junit5"
 
 dependencies {
-    implementation project(':core')
+    implementation project(':geometry')
     implementation "com.google.android.material:material:$material_version"
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junit_jupiter")
