--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ buildscript {
         compose_theme_version = "1.1.14"
         compose_activity_version = "1.5.0"
         compose_viewmodel_version = "2.5.0"
+        immutable_collections_version = "0.3.5"
         pager_version = "0.23.1"
         benManes_version = "0.42.0"
     }
