removed old gradle lines

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
 
     //Memory Leak finder
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
+
+    implementation "androidx.activity:activity-compose:$compose_activity_version"
 }
