--- a/presentation.gradle
+++ b/presentation.gradle
@@ -10,13 +10,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    // fixme remove after full migration to compose colors
     implementation "com.google.android.material:material:$material_version"
-
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions_version"
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -25,7 +20,6 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.navigation:navigation-compose:$navigation_version"
-    implementation "androidx.activity:activity-compose:$compose_activity_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$compose_viewmodel_version"
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:$immutable_collections_version"
 
