--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ buildscript {
         compose_activity_version = "1.5.0"
         compose_viewmodel_version = "2.5.0"
         immutable_collections_version = "0.3.5"
-        pager_version = "0.23.1"
+        accompanist_version = "0.23.1"
         benManes_version = "0.42.0"
     }
 
