--- a/presentation-catalogue/build.gradle
+++ b/presentation-catalogue/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':geometry')
     implementation project(':mapview')
+    implementation project(':tracking')
 
     //Image Loader
     implementation "io.coil-kt:coil-compose:$coil_version"
