--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
             applicationIdSuffix ".zabiniec"
         }
     }
+    namespace 'com.jacekpietras.zoo'
 }
 
 dependencies {
