--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,40 @@
 buildscript {
 
     ext {
-        kotlin_version = "1.7.0"
-        gradle_version = '7.2.2'
+        kotlin_version = "1.7.20"
+        gradle_version = '7.3.1'
         ktx_version = "1.8.0"
-        appcompat_version = "1.4.2"
-        material_version = "1.6.1"
-        koin_version = "3.2.0"
-        leakcanary_version = "2.9.1"
-        coroutines_version = "1.6.3"
-        room_version = "2.5.0-alpha02"
-        gson_version = "2.9.0"
+        appcompat_version = "1.5.1"
+        material_version = "1.7.0"
+        koin_version = "3.3.0"
+        leakcanary_version = "2.10"
+        coroutines_version = "1.6.4"
+        room_version = "2.5.0-beta02"
+        gson_version = "2.10"
         activity_version = "1.1.0"
-        fragment_version = "1.5.0"
-        gms_version = "20.0.0"
+        fragment_version = "1.5.4"
+        gms_version = "21.0.1"
         retrofit_version = "2.9.0"
         okhttp_version = "4.9.0"
-        moshi_version = "1.13.0"
-        coil_version = "2.1.0"
-        navigation_version = "2.5.0"
+        moshi_version = "1.14.0"
+        coil_version = "2.2.2"
+        navigation_version = "2.5.3"
         timber_version = "5.0.1"
-        junit_jupiter = "5.8.2"
+        junit_jupiter = "5.9.1"
         junit5_version = "1.8.2.1"
-        mockito_version = "4.0.0"
+        mockito_version = "4.1.0"
 
-        lifecycle_version = "2.5.0"
+        lifecycle_version = "2.5.1"
         lifecycle_extensions_version = "2.2.0"
 
-        compose_version = "1.1.1"
-        compose_compiler_version = "1.2.0"
-        compose_theme_version = "1.1.14"
-        compose_activity_version = "1.5.0"
-        compose_viewmodel_version = "2.5.0"
+        compose_version = "1.3.1"
+        compose_compiler_version = "1.3.2"
+        compose_theme_version = "1.2.0"
+        compose_activity_version = "1.6.1"
+        compose_viewmodel_version = "2.5.1"
         immutable_collections_version = "0.3.5"
-        accompanist_version = "0.23.1"
-        benManes_version = "0.42.0"
+        accompanist_version = "0.27.1"
+        benManes_version = "0.44.0"
     }
 
     repositories {
