--- a/data/build.gradle
+++ b/data/build.gradle
@@ -29,6 +29,7 @@ android {
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
+    namespace 'com.jacekpietras.zoo.data'
 }
 
 dependencies {
