--- a/presentation-core/build.gradle
+++ b/presentation-core/build.gradle
@@ -1,3 +1,7 @@
 apply plugin: "com.android.library"
 apply from: "$rootDir/common.gradle"
 apply from: "$rootDir/presentation.gradle"
+
+android {
+    namespace 'com.jacekpietras.zoo.core'
+}
