--- a/tracking/build.gradle
+++ b/tracking/build.gradle
@@ -9,6 +9,7 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_compiler_version
     }
+    namespace 'com.jacekpietras.zoo.tracking'
 }
 
 dependencies {
