--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         koin_version = "3.3.0"
         leakcanary_version = "2.10"
         coroutines_version = "1.6.4"
-        room_version = "2.5.0-beta02"
+        room_version = "2.5.0-rc01"
         gson_version = "2.10"
         activity_version = "1.1.0"
         fragment_version = "1.5.4"
