--- a/scrapper/build.gradle
+++ b/scrapper/build.gradle
@@ -17,16 +17,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions("app-dimension")
+    productFlavors {
+        create("cracow_zoo") {
+            setDimension("app-dimension")
+            missingDimensionStrategy("module-dimension", "cracow_zoo")
+            missingDimensionStrategy("feature-dimension", "cracow_zoo")
+        }
+    }
 }
 
 dependencies {
-//    implementation project(':geometry')
-//    implementation project(':presentation-core')
-//    implementation project(':domain')
-//    implementation project(':data')
-//    implementation project(':presentation-catalogue')
-//    implementation project(':presentation-map')
-//    implementation project(':presentation-planner')
-//    implementation project(':logger')
-//    implementation project(':tracking')
+    implementation project(':domain')
+    implementation project(':data')
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 }
