--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,20 @@
 buildscript {
 
     ext {
-        kotlin_version = "1.7.20"
-        gradle_version = '7.3.1'
+        kotlin_version = "1.8.10"
+        gradle_version = '7.4.2'
+        ksp_version = "$kotlin_version-1.0.9"
         ktx_version = "1.8.0"
-        appcompat_version = "1.5.1"
-        material_version = "1.7.0"
-        koin_version = "3.3.0"
+        appcompat_version = "1.6.1"
+        material_version = "1.8.0"
+        koin_version = "3.4.0"
+        koin_compose_version = "3.4.3"
         leakcanary_version = "2.10"
         coroutines_version = "1.6.4"
-        room_version = "2.5.0-rc01"
-        gson_version = "2.10"
+        room_version = "2.5.1"
+        gson_version = "2.10.1"
         activity_version = "1.1.0"
-        fragment_version = "1.5.4"
+        fragment_version = "1.5.6"
         gms_version = "21.0.1"
         retrofit_version = "2.9.0"
         okhttp_version = "4.9.0"
@@ -20,22 +22,22 @@ buildscript {
         coil_version = "2.2.2"
         navigation_version = "2.5.3"
         timber_version = "5.0.1"
-        junit_jupiter = "5.9.1"
+        junit_jupiter = "5.9.2"
         junit5_version = "1.8.2.1"
         mockito_version = "4.1.0"
         yearclass_version = "2.1.0"
 
-        lifecycle_version = "2.5.1"
+        lifecycle_version = "2.6.1"
         lifecycle_extensions_version = "2.2.0"
 
-        compose_version = "1.3.1"
-        compose_compiler_version = "1.3.2"
-        compose_theme_version = "1.2.0"
-        compose_activity_version = "1.6.1"
-        compose_viewmodel_version = "2.5.1"
+        compose_version = "1.4.0"
+        compose_compiler_version = "1.4.4"
+        compose_theme_version = "1.2.1"
+        compose_activity_version = "1.7.0"
+        compose_viewmodel_version = "2.6.1"
         immutable_collections_version = "0.3.5"
-        accompanist_version = "0.27.1"
-        benManes_version = "0.44.0"
+        accompanist_version = "0.30.0"
+        benManes_version = "0.46.0"
     }
 
     repositories {
